(7.3) - (---) - Visibility fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -201,3 +201,36 @@ div.table-responsive.col-md-6 > img {
   border: 3px solid rgba(240,240,240,50);
   margin-left: 6px;
 }
+
+form{
+    width:250px;
+    margin:50px auto;
+    padding:15px 20px;
+    background:#f5f5f5;
+    background-color:rgba(245,245,245,0.95);
+    border-radius: 10px;
+    box-shadow:0 0 5px rgba(0, 0, 0, 0.4);
+    font-size:1em;
+    color:#444;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"]
+{
+    width:100%;
+    border:1px solid #ccc;
+    margin-bottom:1em;
+    padding:5px 5px;
+    background:white;
+    border-radius: 5px;
+    box-shadow:inset 0 1px 2px rgba(0, 0, 0, 0.2);
+    box-sizing:border-box;
+}
+input[type="checkbox"]{
+    margin:0 10px 0 0;
+    border:1px dotted #ddd;
+    background:white;
+    box-shadow:inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    color:#ddd;
+}
